--- a/templates/teacher/scoring.html
+++ b/templates/teacher/scoring.html
@@ -71,11 +71,11 @@ swfobject.embedSWF("/static/sb2/Scratch.swf", "flashContent", "482", "387", "10.
         {% if lesson == "2" %}
         <img width=880 src="/static/work/vphysics/{{student.id}}/{{index}}/{{pic}}.jpg">
         {% elif lesson == "3" %}
-        <img width=880 src="/static/work/euler/{{student.id}}/{{index}}/{{work.id}}.jpg">     
+        <img width=880 src="/static/work/euler/{{student.id}}/{{index}}/{{pic}}.jpg">     
         {% elif lesson == "4" %}
-        <img width=880 src="/static/work/ck/{{student.id}}/{{index}}/{{work.id}}.jpg">     
+        <img width=880 src="/static/work/ck/{{student.id}}/{{index}}/{{pic}}.jpg">     
         {% elif lesson == "5" %}
-        <img width=880 src="/static/work/vphysics2/{{student.id}}/{{index}}/{{work.id}}.jpg">            
+        <img width=880 src="/static/work/vphysics2/{{student.id}}/{{index}}/{{pic}}.jpg">            
         {% endif %}
         <form action="" enctype="multipart/form-data"  method="post">
             <table class="table" style="width:300px">
