--- a/templates/student/lessons.html
+++ b/templates/student/lessons.html
@@ -509,5 +509,16 @@ function MM_swapImage() { //v3.0
   </table>
 <img src="/static/images/vphysics/certificate.png">
 <BR>本單元課程自2018.7.5日起已被瀏覽 <a href="/student/counter/{{lesson}}" target="_blank">{{counter}}</a> 次	    
+{% elif subject_id == "F" %}  
+http://www.books.com.tw/products/0010589636<BR>
+
+http://www.books.com.tw/products/0010676428<BR>
+
+http://www.books.com.tw/products/0010764994<BR>
+
+http://www.books.com.tw/products/0010752714?loc=P_asb_002<BR>
+
+http://www.books.com.tw/products/0010783038<BR>
+  
 {% endif %}    
 {% endblock %}
