--- a/templates/base.html
+++ b/templates/base.html
@@ -70,7 +70,8 @@ jQuery(function () {
           <li><a href="/student/lessons/A">程式設計輕鬆學：使用Scratch2.X</a></li>
           <li><a href="/student/lessons/B">VPhysics物理模擬：使用Python2</a></li>
           <li><a href="/student/lessons/C">Euler數學解題：使用Python3</a></li>    
-          <li><a href="/student/lessons/E">VPhysics物理模擬：使用Python3</a></li>          
+          <li><a href="/student/lessons/E">VPhysics物理模擬：使用Python3</a></li>    
+          <li><a href="/student/lessons/F">網路讀書會：好書共讀</a></li>   
 <!--
           <li><a href="/student/lessons/D">VPhysics物理模擬：建中特色課程</a></li>
           -->
