--- a/templates/student/lessons.html
+++ b/templates/student/lessons.html
@@ -510,15 +510,70 @@ function MM_swapImage() { //v3.0
 <img src="/static/images/vphysics/certificate.png">
 <BR>本單元課程自2018.7.5日起已被瀏覽 <a href="/student/counter/{{lesson}}" target="_blank">{{counter}}</a> 次	    
 {% elif subject_id == "F" %}  
-http://www.books.com.tw/products/0010589636<BR>
-
-http://www.books.com.tw/products/0010676428<BR>
-
-http://www.books.com.tw/products/0010764994<BR>
-
-http://www.books.com.tw/products/0010752714?loc=P_asb_002<BR>
-
-http://www.books.com.tw/products/0010783038<BR>
-  
+<table class="table">
+<tr>
+<td>
+<A href="http://www.books.com.tw/products/0010589636" target="_blank"><img src="/static/book/book01.png"></A>
+</td>
+<td>
+<a href="http://www.books.com.tw/products/0010676428" target="_blank"><img src="/static/book/book02.png"></a>
+</td>
+<td>
+<a href="http://www.books.com.tw/products/0010764994" target="_blank"><img src="/static/book/book03.png"></a>
+</td>
+</tr>
+<tr>
+<td>
+    <table class="table">
+      <tr><Td>可汗學院的教育奇蹟</Td></tr>
+      <tr><td>作者： 薩爾曼．可汗</td></tr>
+      <tr><td>出版日期：2013/06/24</td></tr>
+    </table>
+</td>
+<td>
+    <table class="table">
+      <tr><Td>創新是一種態度</Td></tr>
+      <tr><td>作者： 翟本喬</td></tr>
+      <tr><td>出版日期：2015/06/04</td></tr>
+    </table>
+</td>
+<td>
+    <table class="table">
+      <tr><Td>大腦喜歡這樣學</Td></tr>
+      <tr><td>作者： 芭芭拉‧歐克莉</td></tr>
+      <tr><td>出版日期：2017/09/27</td></tr>
+    </table>  
+</td>  
+</tr>  
+<tr>
+<td>
+<A href="http://www.books.com.tw/products/0010752714?loc=P_asb_002" target="_blank"><img width=250 src="/static/book/book04.png"></A>
+</td>
+<td>
+<a href="http://www.books.com.tw/products/0010783038" target="_blank"><img src="/static/book/book05.png"></a>
+</td>
+<td>
+</td>
+</tr>
+<tr>
+<td>
+    <table class="table">
+      <tr><Td>刻意練習</Td></tr>
+      <tr><td>作者： 安德斯‧艾瑞克森, 羅伯特‧普爾</td></tr>
+      <tr><td>出版日期：2017/06/01</td></tr>
+    </table>
+</td>
+<td>
+    <table class="table">
+      <tr><Td>學習就像終身幼兒園</Td></tr>
+      <tr><td>作者： 米契爾．瑞斯尼克</td></tr>
+      <tr><td>出版日期：2018/04/03</td></tr>
+    </table>
+</td>
+<td>
+ 
+</td>  
+</tr>  
+</table>  
 {% endif %}    
 {% endblock %}
