--- a/templates/student/lessons.html
+++ b/templates/student/lessons.html
@@ -513,13 +513,13 @@ function MM_swapImage() { //v3.0
 <table class="table">
 <tr>
 <td>
-<A href="http://www.books.com.tw/products/0010589636" target="_blank"><img src="/static/book/book01.png"></A>
+<A href="http://www.books.com.tw/products/0010589636" target="_blank"><img width=250px src="/static/book/book01.png"></A>
 </td>
 <td>
-<a href="http://www.books.com.tw/products/0010676428" target="_blank"><img src="/static/book/book02.png"></a>
+<a href="http://www.books.com.tw/products/0010676428" target="_blank"><img width=250px  src="/static/book/book02.png"></a>
 </td>
 <td>
-<a href="http://www.books.com.tw/products/0010764994" target="_blank"><img src="/static/book/book03.png"></a>
+<a href="http://www.books.com.tw/products/0010764994" target="_blank"><img width=250px  src="/static/book/book03.png"></a>
 </td>
 </tr>
 <tr>
@@ -547,12 +547,13 @@ function MM_swapImage() { //v3.0
 </tr>  
 <tr>
 <td>
-<A href="http://www.books.com.tw/products/0010752714?loc=P_asb_002" target="_blank"><img width=250 src="/static/book/book04.png"></A>
+<A href="http://www.books.com.tw/products/0010752714?loc=P_asb_002" target="_blank"><img width=250px  width=250 src="/static/book/book04.png"></A>
 </td>
 <td>
-<a href="http://www.books.com.tw/products/0010783038" target="_blank"><img src="/static/book/book05.png"></a>
+<a href="http://www.books.com.tw/products/0010783038" target="_blank"><img width=250px  src="/static/book/book05.png"></a>
 </td>
 <td>
+<a href="http://www.books.com.tw/products/0010516904" target="_blank"><img width=250px  src="/static/book/book06.png"></a>
 </td>
 </tr>
 <tr>
@@ -571,7 +572,11 @@ function MM_swapImage() { //v3.0
     </table>
 </td>
 <td>
- 
+    <table class="table">
+      <tr><Td>讓天賦自由</Td></tr>
+      <tr><td>作者：肯．羅賓森</td></tr>
+      <tr><td>出版日期：2011/08/31</td></tr>
+    </table> 
 </td>  
 </tr>  
 </table>  
