--- a/templates/student/lessons.html
+++ b/templates/student/lessons.html
@@ -591,9 +591,140 @@ function MM_swapImage() { //v3.0
 <td>  
 <a onmouseover="MM_swapImage('menu19','','/static/images/django/django192.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/G19"><img name=menu19 src="/static/images/django/django191.png"></a><br><br>
 </td>
+  <!--
 <td>
 <a onmouseover="MM_swapImage('menu20','','/static/images/django/django202.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/G20"><img name=menu20 src="/static/images/django/django201.png"></a><br><br>
 </td>
+  -->
+  </tr>
+  </table> 
+<hr>
+<img src="/static/images/django/django1.png">
+<table style="border:0px; width=900px;" >    
+<tr>
+<td width="400px">  
+<a onmouseover="MM_swapImage('menua1','','/static/images/django/djangoa12.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/GA1"><img name=menua1 src="/static/images/django/djangoa11.png"></a>
+</td>
+<td>
+<a onmouseover="MM_swapImage('menua2','','/static/images/django/djangoa22.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/GA2"><img name=menua2 src="/static/images/django/djangoa21.png"></a><br><br>  
+</td>
+</tr>
+<tr>
+<td>  
+<a onmouseover="MM_swapImage('menua3','','/static/images/django/djangoa32.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/GA3"><img name=menua3 src="/static/images/django/djangoa31.png"></a><br><br>
+</td>
+<td>
+<a onmouseover="MM_swapImage('menua4','','/static/images/django/djangoa42.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/GA4"><img name=menua4 src="/static/images/django/djangoa41.png"></a><br><br>
+</td>
+</tr>
+<tr>
+<td>  
+<a onmouseover="MM_swapImage('menua5','','/static/images/django/djangoa52.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/GA5"><img name=menua5 src="/static/images/django/djangoa51.png"></a><br><br>
+</td>
+<td>
+<a onmouseover="MM_swapImage('menua6','','/static/images/django/djangoa62.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/GA6"><img name=menua6 src="/static/images/django/djangoa61.png"></a><br><br>
+</td>
+</tr>
+  </table>   
+<hr>
+<img src="/static/images/django/django2.png">
+<table style="border:0px; width=900px;" >    
+<tr>
+<td width="400px">  
+<a onmouseover="MM_swapImage('menub1','','/static/images/django/djangob12.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/GB1"><img name=menub1 src="/static/images/django/djangob11.png"></a>
+</td>
+<td>
+<a onmouseover="MM_swapImage('menub2','','/static/images/django/djangob22.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/GB2"><img name=menub2 src="/static/images/django/djangob21.png"></a><br><br>  
+</td>
+</tr>
+<tr>
+<td>  
+<a onmouseover="MM_swapImage('menub3','','/static/images/django/djangob32.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/GB3"><img name=menub3 src="/static/images/django/djangob31.png"></a><br><br>
+</td>
+<td>
+<a onmouseover="MM_swapImage('menub4','','/static/images/django/djangob42.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/GB4"><img name=menub4 src="/static/images/django/djangob41.png"></a><br><br>
+</td>
+</tr>
+<tr>
+<td>  
+<a onmouseover="MM_swapImage('menub5','','/static/images/django/djangob52.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/GB5"><img name=menub5 src="/static/images/django/djangob51.png"></a><br><br>
+</td>
+<td>
+<a onmouseover="MM_swapImage('menub6','','/static/images/django/djangob62.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/GB6"><img name=menub6 src="/static/images/django/djangob61.png"></a><br><br>
+</td>
+</tr>
+  </table> 
+  <hr>
+<img src="/static/images/django/django3.png">
+<table style="border:0px; width=900px;" >    
+<tr>
+<td width="400px">  
+<a onmouseover="MM_swapImage('menuc1','','/static/images/django/djangoc12.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/GC1"><img name=menuc1 src="/static/images/django/djangoc11.png"></a>
+</td>
+<td>
+<a onmouseover="MM_swapImage('menuc2','','/static/images/django/djangoc22.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/GC2"><img name=menuc2 src="/static/images/django/djangoc21.png"></a><br><br>  
+</td>
+</tr>
+<tr>
+<td>  
+<a onmouseover="MM_swapImage('menuc3','','/static/images/django/djangoc32.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/GC3"><img name=menuc3 src="/static/images/django/djangoc31.png"></a><br><br>
+</td>
+<td>
+<a onmouseover="MM_swapImage('menuc4','','/static/images/django/djangoc42.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/GC4"><img name=menuc4 src="/static/images/django/djangoc41.png"></a><br><br>
+</td>
+</tr>
+<tr>
+<td>  
+<a onmouseover="MM_swapImage('menuc5','','/static/images/django/djangoc52.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/GC5"><img name=menuc5 src="/static/images/django/djangoc51.png"></a><br><br>
+</td>
+<td>
+<a onmouseover="MM_swapImage('menuc6','','/static/images/django/djangoc62.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/GC6"><img name=menuc6 src="/static/images/django/djangoc61.png"></a><br><br>
+</td>
+</tr>
+<tr>
+<td>  
+<a onmouseover="MM_swapImage('menuc7','','/static/images/django/djangoc72.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/GC7"><img name=menuc7 src="/static/images/django/djangoc71.png"></a><br><br>
+</td>
+<td>
+<a onmouseover="MM_swapImage('menuc8','','/static/images/django/djangoc82.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/GC8"><img name=menuc8 src="/static/images/django/djangoc81.png"></a><br><br>
+</td>
+</tr>
+  </table> 
+  <hr>
+<img src="/static/images/django/django1.png">
+<table style="border:0px; width=900px;" >    
+<tr>
+<td width="400px">  
+<a onmouseover="MM_swapImage('menud1','','/static/images/django/djangod12.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/GD1"><img name=menud1 src="/static/images/django/djangod11.png"></a>
+</td>
+<td>
+<a onmouseover="MM_swapImage('menud2','','/static/images/django/djangod22.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/GD2"><img name=menud2 src="/static/images/django/djangod21.png"></a><br><br>  
+</td>
+</tr>
+<tr>
+<td>  
+<a onmouseover="MM_swapImage('menud3','','/static/images/django/djangod32.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/GD3"><img name=menud3 src="/static/images/django/djangod31.png"></a><br><br>
+</td>
+<td>
+<a onmouseover="MM_swapImage('menud4','','/static/images/django/djangod42.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/GD4"><img name=menud4 src="/static/images/django/djangod41.png"></a><br><br>
+</td>
+</tr>
+<tr>
+<td>  
+<a onmouseover="MM_swapImage('menud5','','/static/images/django/djangod52.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/GD5"><img name=menud5 src="/static/images/django/djangod51.png"></a><br><br>
+</td>
+<td>
+<a onmouseover="MM_swapImage('menud6','','/static/images/django/djangod62.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/GD6"><img name=menud6 src="/static/images/django/djangod61.png"></a><br><br>
+</td>
+</tr>
+<tr>
+<td>  
+<a onmouseover="MM_swapImage('menud7','','/static/images/django/djangod72.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/GD7"><img name=menud7 src="/static/images/django/djangod71.png"></a><br><br>
+</td>
+<td>
+<a onmouseover="MM_swapImage('menud8','','/static/images/django/djangod82.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/GD8"><img name=menud8 src="/static/images/django/djangod81.png"></a><br><br>
+</td>
+</tr>
   </table> 
 <img src="/static/images/django/certificate.png">
 <BR>本單元課程自2018.8.4日起已被瀏覽 <a href="/student/counter/{{lesson}}" target="_blank">{{counter}}</a> 次	
