--- a/templates/base.html
+++ b/templates/base.html
@@ -34,6 +34,8 @@ jQuery(function () {
 });
 
 </script>
+<link rel="icon" type="image/png" href="/static/images/icon_title.png">
+<link rel="apple-touch-icon" href="/static/images/icon_title.png">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 <link rel="stylesheet" href="/static/layout/styles/layout.css" type="text/css" />
 <!-- / Superfish Menu -->
@@ -71,11 +73,10 @@ jQuery(function () {
           <li><a href="/student/lessons/B">VPhysics物理模擬：使用Python2</a></li>
           <li><a href="/student/lessons/C">Euler數學解題：使用Python3</a></li>    
           <li><a href="/student/lessons/E">VPhysics物理模擬：使用Python3</a></li>    
+          <li><a href="/student/lessons/D">VPhysics物理模擬：建中特色課程</a></li>
           <li><a href="/student/lessons/G">Django網站開發：使用Python3</a></li>              
           <li><a href="/student/lessons/F">網路讀書會：好書共讀</a></li>   
-<!--
-          <li><a href="/student/lessons/D">VPhysics物理模擬：建中特色課程</a></li>
-          -->
+
         </ul>
       </li>
       <li><a href="#"><img src="/static/images/icon_lesson.png"> 藝廊</a>    
