--- a/templates/student/lessons.html
+++ b/templates/student/lessons.html
@@ -399,8 +399,9 @@ function MM_swapImage() { //v3.0
     </td>
   </tr>
   </table> 
-<img src="/static/images/ck/certificate.png">	
+<img src="/static/images/ck/certificate.png">	<BR>
 <BR>本單元課程自2018.7.1日起已被瀏覽 <a href="/student/counter/{{lesson}}" target="_blank">{{counter}}</a> 次	
+<a href='https://www.freepik.com/free-vector/large-round-icons-pack_745440.htm'>Designed by Freepik</a>  
 {% elif subject_id == "E" %}
 <img src="/static/images/vphysics/vphysics.png">
 <BR><BR>
@@ -520,76 +521,76 @@ function MM_swapImage() { //v3.0
 <a onmouseover="MM_swapImage('menu01','','/static/images/django/django012.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/G01"><img name=menu01 src="/static/images/django/django011.png"></a>
 </td>
 <td>
-<a onmouseover="MM_swapImage('menu02','','/static/images/django/django022.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/G02"><img name=menu02 src="/static/images/django/django021.png"></a><br><br>  
+<a onmouseover="MM_swapImage('menu02','','/static/images/django/django022.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/G02"><img name=menu02 src="/static/images/django/django020.png"></a><br><br>  
 </td>
 </tr>
 <tr>
 <td>  
-<a onmouseover="MM_swapImage('menu03','','/static/images/django/django032.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/G03"><img name=menu03 src="/static/images/django/django031.png"></a><br><br>
+<a onmouseover="MM_swapImage('menu03','','/static/images/django/django032.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/G03"><img name=menu03 src="/static/images/django/django030.png"></a><br><br>
 </td>
 <td>
-<a onmouseover="MM_swapImage('menu04','','/static/images/django/django042.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/G04"><img name=menu04 src="/static/images/django/django041.png"></a><br><br>
+<a onmouseover="MM_swapImage('menu04','','/static/images/django/django042.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/G04"><img name=menu04 src="/static/images/django/django040.png"></a><br><br>
 </td>
 </tr>
 <tr>
 <td>  
-<a onmouseover="MM_swapImage('menu05','','/static/images/django/django052.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/G05"><img name=menu05 src="/static/images/django/django051.png"></a><br><br>
+<a onmouseover="MM_swapImage('menu05','','/static/images/django/django052.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/G05"><img name=menu05 src="/static/images/django/django050.png"></a><br><br>
 </td>
 <td>
-<a onmouseover="MM_swapImage('menu06','','/static/images/django/django062.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/G06"><img name=menu06 src="/static/images/django/django061.png"></a><br><br>
+<a onmouseover="MM_swapImage('menu06','','/static/images/django/django062.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/G06"><img name=menu06 src="/static/images/django/django060.png"></a><br><br>
 </td>
 </tr>
 <tr>
 <td>  
-<a onmouseover="MM_swapImage('menu07','','/static/images/django/django072.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/G07"><img name=menu07 src="/static/images/django/django071.png"></a><br><br>
+<a onmouseover="MM_swapImage('menu07','','/static/images/django/django072.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/G07"><img name=menu07 src="/static/images/django/django070.png"></a><br><br>
 </td>
 <td>
-<a onmouseover="MM_swapImage('menu08','','/static/images/django/django082.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/G08"><img name=menu08 src="/static/images/django/django081.png"></a><br><br>
+<a onmouseover="MM_swapImage('menu08','','/static/images/django/django082.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/G08"><img name=menu08 src="/static/images/django/django080.png"></a><br><br>
 </td>
 </tr>
 <tr>
 <td>  
-<a onmouseover="MM_swapImage('menu09','','/static/images/django/django092.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/G09"><img name=menu09 src="/static/images/django/django091.png"></a><br><br>
+<a onmouseover="MM_swapImage('menu09','','/static/images/django/django092.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/G09"><img name=menu09 src="/static/images/django/django090.png"></a><br><br>
 </td>
 <td>
-<a onmouseover="MM_swapImage('menu10','','/static/images/django/django102.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/G10"><img name=menu10 src="/static/images/django/django101.png"></a><br><br>
+<a onmouseover="MM_swapImage('menu10','','/static/images/django/django102.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/G10"><img name=menu10 src="/static/images/django/django100.png"></a><br><br>
 </td>
 </tr>
 <tr>
 <td>  
-<a onmouseover="MM_swapImage('menu11','','/static/images/django/django112.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/G11"><img name=menu11 src="/static/images/django/django111.png"></a><br><br>
+<a onmouseover="MM_swapImage('menu11','','/static/images/django/django112.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/G11"><img name=menu11 src="/static/images/django/django110.png"></a><br><br>
 </td>
 <td>
-<a onmouseover="MM_swapImage('menu12','','/static/images/django/django122.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/G12"><img name=menu12 src="/static/images/django/django121.png"></a><br><br>
+<a onmouseover="MM_swapImage('menu12','','/static/images/django/django122.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/G12"><img name=menu12 src="/static/images/django/django120.png"></a><br><br>
 </td>
 </tr>
 <tr>
 <td>  
-<a onmouseover="MM_swapImage('menu13','','/static/images/django/django132.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/G13"><img name=menu13 src="/static/images/django/django131.png"></a><br><br>
+<a onmouseover="MM_swapImage('menu13','','/static/images/django/django132.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/G13"><img name=menu13 src="/static/images/django/django130.png"></a><br><br>
 </td>
 <td>
-<a onmouseover="MM_swapImage('menu14','','/static/images/django/django142.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/G14"><img name=menu14 src="/static/images/django/django141.png"></a><br><br>
+<a onmouseover="MM_swapImage('menu14','','/static/images/django/django142.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/G14"><img name=menu14 src="/static/images/django/django140.png"></a><br><br>
 </td>
 </tr>
 <tr>
 <td>  
-<a onmouseover="MM_swapImage('menu15','','/static/images/django/django152.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/G15"><img name=menu15 src="/static/images/django/django151.png"></a><br><br>
+<a onmouseover="MM_swapImage('menu15','','/static/images/django/django152.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/G15"><img name=menu15 src="/static/images/django/django150.png"></a><br><br>
 </td>
 <td>
-<a onmouseover="MM_swapImage('menu16','','/static/images/django/django162.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/G16"><img name=menu16 src="/static/images/django/django161.png"></a><br><br>
+<a onmouseover="MM_swapImage('menu16','','/static/images/django/django162.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/G16"><img name=menu16 src="/static/images/django/django160.png"></a><br><br>
 </td>
 </tr>
 <tr>
 <td>  
-<a onmouseover="MM_swapImage('menu17','','/static/images/django/django172.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/G17"><img name=menu17 src="/static/images/django/django171.png"></a><br><br>
+<a onmouseover="MM_swapImage('menu17','','/static/images/django/django172.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/G17"><img name=menu17 src="/static/images/django/django170.png"></a><br><br>
 </td>
 <td>
-<a onmouseover="MM_swapImage('menu18','','/static/images/django/django182.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/G18"><img name=menu18 src="/static/images/django/django181.png"></a><br><br>
+<a onmouseover="MM_swapImage('menu18','','/static/images/django/django182.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/G18"><img name=menu18 src="/static/images/django/django180.png"></a><br><br>
 </td>
 </tr>
 <tr>
 <td>  
-<a onmouseover="MM_swapImage('menu19','','/static/images/django/django192.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/G19"><img name=menu19 src="/static/images/django/django191.png"></a><br><br>
+<a onmouseover="MM_swapImage('menu19','','/static/images/django/django192.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/G19"><img name=menu19 src="/static/images/django/django190.png"></a><br><br>
 </td>
   <!--
 <td>
