--- a/templates/student/lessonG.html
+++ b/templates/student/lessonG.html
@@ -165,7 +165,7 @@
         });
 
         var toggle = $('.expand-toggle');
-        var tocExpand = false;
+        var tocExpand = true;
 
         checkExpandToggle();
         toggle.click(function (e) {
