--- a/templates/student/lessons.html
+++ b/templates/student/lessons.html
@@ -379,7 +379,8 @@ function MM_swapImage() { //v3.0
   </tr>
   </table> 
 <img src="/static/images/euler/certificate.png">
-<BR>本單元課程自2018.4.23日起已被瀏覽 <a href="/student/counter/{{lesson}}" target="_blank">{{counter}}</a> 次	
+<BR>本單元課程自2018.4.23日起已被瀏覽 <a href="/student/counter/{{lesson}}" target="_blank">{{counter}}</a> 次
+<a href='https://www.freepik.com/free-vector/colorful-business-icons_793959.htm'>Designed by Freepik</a>  
 {% elif subject_id == "D" %}
 <img src="/static/images/ck/ck.png"><BR>
 		<table style="border:0px; width:900px;">    
