--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -191,7 +191,7 @@
             <a href="/student/work/list/5" style="color: #000000; background: rgba(0, 0, 0, 0);text-decoration: none">x 班次共 x 個作業</a>
           </div>
           <div style="left:646px">
-            <a href="/student/work/list/6" style="color: #000000; background: rgba(0, 0, 0, 0);text-decoration: none"></a>
+            <a href="/student/work/list/6" style="color: #000000; background: rgba(0, 0, 0, 0);text-decoration: none">x 班次共 x 個作業</a>
           </div>
           
         </div>
