--- a/templates/base.html
+++ b/templates/base.html
@@ -76,6 +76,7 @@ li>ul {display:none}
           <li><a href="/student/lessons/E">VPhysics物理模擬：使用Python3</a></li>
           <li><a href="/student/lessons/D">VPhysics物理模擬：建中特色課程</a></li>
           <li><a href="/student/lessons/G">Django網站開發：使用Python3</a></li>
+          <li><a href="https://hackmd.io/c/rJ1XHSk77/https%3A%2F%2Fhackmd.io%2Fs%2FB1PqMcJbX" target="_blank">Pandas數據分析：使用Python3</a></li>
           <li><a href="/student/lessons/F">網路讀書會：好書共讀</a></li>
         </ul>
       </li>
